--- a/src/components/form/Form.module.css
+++ b/src/components/form/Form.module.css
@@ -27,8 +27,9 @@
 
 .error {
     color: red;
-    font-size: 0.8rem;
-    margin-top: 5px;
+    font-size: 0.875rem;
+    margin-top: 4px;
+    display: block;
 }
 
 .button {
